--- a/moriworks/.gitignore
+++ b/moriworks/.gitignore
@@ -5,8 +5,6 @@
 /.pnp
 .pnp.js
 
-
-
 # testing
 /coverage
 
@@ -25,6 +23,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
 .env*.local
@@ -35,4 +34,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-/node_modules/
