--- a/moriworks/package.json
+++ b/moriworks/package.json
@@ -23,7 +23,8 @@
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "supabase": "^1.64.8"
   },
   "keywords": [],
   "author": "",
