--- a/moriworks/package.json
+++ b/moriworks/package.json
@@ -11,22 +11,21 @@
   "dependencies": {
     "@next/font": "^13.4.2",
     "@supabase/supabase-js": "^2.24.0",
-    "@types/node": "^20.1.4",
-    "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "next": "^13.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.62.1",
-    "typescript": "5.0.4"
+    "sass": "^1.63.4"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.13",
     "@types/styled-components": "^5.1.26",
-    "@types/styled-components": "^5.1.26",
-    "supabase": "^1.64.8"
+    "supabase": "^1.64.8",
+    "typescript": "5.1.3"
   },
   "keywords": [],
   "author": "",
